syntax = "proto3";

package zksync.config.secrets;


message DatabaseSecrets {
  optional string server_url = 1; // optional
  optional string server_replica_url = 2; // optional
  optional string prover_url = 3; // optional
}

message L1Secrets {
  optional string l1_rpc_url = 1; // required
}

message ConsensusSecrets {
  optional string validator_key = 1; // required for validator nodes; ValidatorSecretKey
  optional string node_key = 2; // required for any node; NodeSecretKey
  optional string attester_key = 3; // required for attester nodes; AttesterSecretKey
}

message AvailSecrets {
  optional string seed_phrase = 1;
}

message CelestiaSecrets {
  optional string private_key = 1;
}

message DataAvailabilitySecrets {
  oneof da_secrets {
    AvailSecrets avail = 1;
    CelestiaSecrets celestia = 2;
  }
}

message Secrets {
  optional DatabaseSecrets database = 1;  // optional secrets for database
  optional L1Secrets l1 = 2; // optional secrets for l1 communication
  optional ConsensusSecrets consensus = 3; // optional secrets for consensus
  optional DataAvailabilitySecrets data_availability = 4; // optional secrets for data availability
}
